--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,8 +83,10 @@
                     <th>NAME</th>
                     <th>AUTHOR</th>
                     <th>COST</th>
+                    <th>LIBRARY</th>
+                    <th>DETAILS PAGE</th>
                     <th>DESCRIPTION</th>
-                    <th style="width: 8%;">DETAILS</th>
+                    <th style="width: 5%;">DETAILS</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -93,6 +95,8 @@
                     <td th:text="${b.name}"></td>
                     <td th:text="${b.author}"></td>
                     <td th:text="${b.cost}"></td>
+                    <td th:text="${b.library.name}"></td>
+                    <td th:text="${'color: ' +b.imageBook.colorPage + '/font: ' + b.imageBook.mainFont}"></td>
                     <td th:text="${b.description}"></td>
                     <td><a class="btn btn-secondary btn-sm" th:href="@{'/details-book/' + ${b.id}}">DETAILS</a></td>
                 </tr>
