--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -104,6 +104,15 @@
             </table>
         </div>
     </div>
+
+    <div>
+        <form action="/add-magazine" method="post">
+            <input type="text" placeholder="name" name="name" class="form-control">
+            <input type="text" placeholder="description" name="description" class="form-control">
+            <input type="number" placeholder="cost" name="cost" class="form-control">
+            <button class="btn btn-sm btn-success">ADD</button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
