--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="/add-book">ADD BOOK</a>
         </li>
       </ul>
-      <form class="d-flex" role="search" action="/search" method="get">
+      <form class="d-flex" role="search" action="/search-by-word" method="get">
         <input name="word" class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
